@@ -1,8 +1,8 @@
 #!/bin/bash -x
 
 #
-# Copyright (c) 2018, 2021 Oracle and/or its affiliates. All rights reserved.
-# Copyright (c) 2019, 2021 Payara Foundation and/or its affiliates. All rights reserved.
+# Copyright (c) 2018, 2022 Oracle and/or its affiliates. All rights reserved.
+# Copyright (c) 2019, 2022 Payara Foundation and/or its affiliates. All rights reserved.
 #
 # This program and the accompanying materials are made available under the
 # terms of the Eclipse Public License v. 2.0, which is available at
@@ -39,44 +39,28 @@ fi
 export TS_HOME=${CTS_HOME}/jakartaeetck/
 
 if [ -z "${GF_RI_TOPLEVEL_DIR}" ]; then
-    echo "Using glassfish6 for GF_RI_TOPLEVEL_DIR"
-    export GF_RI_TOPLEVEL_DIR=glassfish6
+    echo "Using glassfish7 for GF_RI_TOPLEVEL_DIR"
+    export GF_RI_TOPLEVEL_DIR=glassfish7
 fi
 
 if [ -z "${GF_VI_TOPLEVEL_DIR}" ]; then
-    echo "Using glassfish6 for GF_VI_TOPLEVEL_DIR"
-    export GF_VI_TOPLEVEL_DIR=glassfish6
+    echo "Using glassfish7 for GF_VI_TOPLEVEL_DIR"
+    export GF_VI_TOPLEVEL_DIR=glassfish7
 fi
 
-if [[ "$JDK" == "JDK11" || "$JDK" == "jdk11" ]];then
-  cp $TS_HOME/bin/ts.jte.jdk11 $TS_HOME/bin/ts.jte
-  export JAVA_HOME=${JDK11_HOME}
-  export PATH=$JAVA_HOME/bin:$PATH
-  export ANT_OPTS="-Xmx2G \
-                 -Djavax.xml.accessExternalStylesheet=all \
-                 -Djavax.xml.accessExternalSchema=all \
-		 -DenableExternalEntityProcessing=true \
-                 -Djavax.xml.accessExternalDTD=file,http"
-  export CTS_ANT_OPTS="-Djavax.xml.accessExternalStylesheet=all \
-                 -Djavax.xml.accessExternalSchema=all \
-     -Djavax.xml.accessExternalDTD=file,http"
-
-else
-  export ANT_OPTS="-Xmx2G -Djava.endorsed.dirs=${CTS_HOME}/vi/$GF_VI_TOPLEVEL_DIR/modules/endorsed \
-                 -Djavax.xml.accessExternalStylesheet=all \
-                 -Djavax.xml.accessExternalSchema=all \
-		 -DenableExternalEntityProcessing=true \
-                 -Djavax.xml.accessExternalDTD=file,http"
-  export CTS_ANT_OPTS="-Djava.endorsed.dirs=${CTS_HOME}/vi/$GF_VI_TOPLEVEL_DIR/glassfish/modules/endorsed \
-                 -Djavax.xml.accessExternalStylesheet=all \
-                 -Djavax.xml.accessExternalSchema=all \
-     -Djavax.xml.accessExternalDTD=file,http"
-
+if [[ "$JDK" == "JDK17" || "$JDK" == "jdk17" ]];then
+  export JAVA_HOME=${JDK17_HOME}
 fi
+export PATH=$JAVA_HOME/bin:$PATH
 
-if [ -z "${RI_JAVA_HOME}" ]; then
-  export RI_JAVA_HOME=$JAVA_HOME
-fi
+export ANT_OPTS="-Xmx2G \
+               -Djavax.xml.accessExternalStylesheet=all \
+               -Djavax.xml.accessExternalSchema=all \
+	 -DenableExternalEntityProcessing=true \
+               -Djavax.xml.accessExternalDTD=file,http"
+export CTS_ANT_OPTS="-Djavax.xml.accessExternalStylesheet=all \
+               -Djavax.xml.accessExternalSchema=all \
+   -Djavax.xml.accessExternalDTD=file,http"
 
 # Run CTS related steps
 echo "JAVA_HOME ${JAVA_HOME}"
@@ -161,10 +145,6 @@ mkdir -p ${CTS_HOME}/ri
 unzip -q ${CTS_HOME}/latest-glassfish.zip -d ${CTS_HOME}/ri
 chmod -R 777 ${CTS_HOME}/ri
 
-if [ ! -z "${RI_JAVA_HOME}" ]; then
- echo "AS_JAVA=${RI_JAVA_HOME}" >> ${CTS_HOME}/ri/${GF_RI_TOPLEVEL_DIR}/glassfish/config/asenv.conf
-fi
-
 export ADMIN_PASSWORD_FILE="${CTS_HOME}/admin-password.txt"
 echo "AS_ADMIN_PASSWORD=adminadmin" > ${ADMIN_PASSWORD_FILE}
 
@@ -215,8 +195,8 @@ sleep 5
 
 echo "Killing any RI java processes that were not stopped gracefully"
 echo "Pending process to be killed:"
-ps -eaf | grep "$RI_JAVA_HOME/bin/java" | grep -v "grep" | grep -v "nohup" 
-for i in `ps -eaf | grep "$RI_JAVA_HOME/bin/java" | grep -v "grep" | grep -v "nohup" | tr -s " " | cut -d" " -f2`
+ps -eaf | grep "$JAVA_HOME/bin/java" | grep -v "grep" | grep -v "nohup" 
+for i in `ps -eaf | grep "$JAVA_HOME/bin/java" | grep -v "grep" | grep -v "nohup" | tr -s " " | cut -d" " -f2`
 do
   echo "[killJava.sh] kill -9 $i"
   kill -9 $i
@@ -274,7 +254,7 @@ ${CTS_HOME}/vi/$GF_VI_TOPLEVEL_DIR/glassfish/bin/asadmin --user admin --password
 ${CTS_HOME}/vi/$GF_VI_TOPLEVEL_DIR/glassfish/bin/asadmin --user admin --passwordfile ${ADMIN_PASSWORD_FILE} version
 ${CTS_HOME}/vi/$GF_VI_TOPLEVEL_DIR/glassfish/bin/asadmin --user admin --passwordfile ${ADMIN_PASSWORD_FILE} create-jvm-options -Djava.security.manager
 #https://github.com/eclipse-ee4j/jakartaee-tck/issues/631
-if [[ ("$JDK" == "JDK11" || "$JDK" == "jdk11") &&  $test_suite == jstl ]]; then
+if [[ $test_suite == jstl ]]; then
   ${CTS_HOME}/vi/$GF_VI_TOPLEVEL_DIR/glassfish/bin/asadmin --user admin --passwordfile ${ADMIN_PASSWORD_FILE} create-jvm-options -Djava.locale.providers=COMPAT
 fi
 ${CTS_HOME}/vi/$GF_VI_TOPLEVEL_DIR/glassfish/bin/asadmin --user admin --passwordfile ${ADMIN_PASSWORD_FILE} stop-domain
